added new Event

--- a/Event/Event.html
+++ b/Event/Event.html
@@ -2,17 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="Event.css">
+    <link rel="stylesheet" href="Event.css" />
 </head>
 
 <body>
-
-    <button>Clicke me</button>
-
-
+    <section id="boxes"></section>
 
     <script src="Event.js"></script>
 </body>
